# SpatialCIMIS

./: .gitignore  GRID_STANDARDIZATION_README.md  Kmean-clustering-inertia-silhouette.txt  Kmean-clustering-inertia-silhouette_new.txt  README.md  SOLUTION_SUMMARY.md  VSCODE_USAGE.md  WORKING_NOTES.md  analysis_config.txt  analysis_config_rs.txt  analysis_stats.py  analyze_negative_eto.py  ascii_processing.py  check_results.py  compare_2017_2week.py  compare_ascii_footprints.py  compare_eto_files.py  compare_eto_statistics.py  compare_gridmet_footprint_resolution.py  compare_netcdf_footprints.py  create_spatial_climatology_gridmet.py  create_tx_mask.py  download_cimis_data.py  extract_ascii_metadata.py  extract_station_pixels.py  extract_station_pixels.sh  plot_2004_days.py  plot_ascii_histogram.py  plot_comparison.py  plot_comparison_gridmet.py  plot_config_rs.txt  plot_few_days.py  plot_filesize_histogram.py  plot_grid_change.py  plot_gridmet_comparison.py  plot_gridmet_eto.py  plot_rs_sample.py  plot_station_timeseries.py  plot_station_validation.py  plot_tx_2023.py  (+29 more)
cimis_analysis_package/: __init__.py  config.py  data_fetching.py  data_processing.py  test.ipynb
scimis_ft/: README.md  pyproject.toml
scimis_ft/src/scimis_ft/: __init__.py  cli.py  climatology.py  config.py  fourier.py  io.py  plotting.py  processing.py
